Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.9.3, 0.10.0
-
None
-
Windows, MinGW-64/MSYS2 2016-10-26 (gcc 6.3)
Description
There are numerous issues building the Windows C++ library with MinGW and gcc 6.3. They need to be resolved together so I am combining them into a single Jira item. See the linked, superceded items for details.
Attachments
Issue Links
- is duplicated by
-
THRIFT-1677 MinGW support broken
-
- Closed
-
- relates to
-
THRIFT-3973 Remove MSVC C++ projects to improve maintainability; document building Thrift on Windows using CMake to generate project files
-
- Open
-
- supercedes
-
THRIFT-3993 error: cannot convert 'const thrift_timespec*' to 'const timespec*'
-
- Closed
-
-
THRIFT-3994 Wrong pthread_t handling under MinGW
-
- Closed
-
-
THRIFT-3995 error: 'boost::thread::id::id(boost::thread::id::data)' is private
-
- Closed
-
- links to