THRIFT-4046 fix PlatformSocket.h for mingw64/msys2 and provide instructions for building with cmake under that toolchain Client: cmake Patch: James E. King, III <jking@apache.org>

This closes #1171